Tue Feb 18 09:47:34 1997  Ezra Peisach  <epeisach@mit.edu>

	* compat_recv.c: Remove include of kerberosIV/krb4-proto.h

Mon May 20 02:37:44 1996  Sam Hartman  <hartmans@mit.edu>

	* seteuid.c: Include k5-int.h

Sun May 19 23:28:22 1996  Sam Hartman  <hartmans@mit.edu>

	* seteuid.c (krb5_seteuid): set saved uid to current effective
 	uid, not current real uid, so we can get back, while calling
 	setresuid().

Sat May 18 04:41:55 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in:  Check for functions needed to seteuid.

	* seteuid.c (krb5_seteuid): New function to allow UID to be
        changed and returned to later.
